# OPscinema

./: Cargo.toml  README.md
.github/: dependabot.yml  pull_request_template.md
.github/codex/: README.md
.github/codex/prompts/: pr-review.md  release-readiness.md
.github/codex/schemas/: pr-review.schema.json  release-readiness.schema.json
.github/codex/scripts/: sanitize_pr_metadata.py
.github/workflows/: ci.yml  codeql.yml  codex-pr-review.yml  codex-release-readiness.yml  notarize.yml  perf-enforced.yml  perf-foundation.yml  release.yml
.perf-baselines/: build-time.json  bundle.json
apps/desktop/src-tauri/src/anchors/: cache.rs
apps/desktop/ui/: package-lock.json  package.json
docs/: PORTFOLIO-DISPOSITION.md
scripts/perf/: bundle-report.mjs  check-assets.sh  compare-metric.mjs  measure-build-time.mjs
