[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/opscinema_types",
  "crates/opscinema_ipc",
  "crates/opscinema_export_manifest",
  "crates/opscinema_verifier_sdk",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
rusqlite = { version = "0.39", features = ["bundled", "chrono", "serde_json"] }
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
walkdir = "2"
